# api/docs/swagger.yaml
@@ -50,7 +50,7 @@ definitions:
   models.CreatePost:
     properties:
       category_id:
-        type: string
+        type: integer
       description:
         type: string
       image_url:
@@ -58,14 +58,12 @@ definitions:
       title:
         type: string
       user_id:
-        type: string
+        type: integer
       views_count:
-        type: string
+        type: integer
     type: object
   models.CreateUser:
     properties:
-      created_at:
-        type: string
       email:
         type: string
       first_name:
@@ -104,7 +102,7 @@ definitions:
   models.Post:
     properties:
       category_id:
-        type: string
+        type: integer
       created_at:
         type: string
       description:
@@ -118,9 +116,9 @@ definitions:
       updated_at:
         type: string
       user_id:
-        type: string
+        type: integer
       views_count:
-        type: string
+        type: integer
     type: object
   models.User:
     properties:
@@ -154,7 +152,7 @@ info:
   title: Swagger for blog api
   version: "1.0"
 paths:
-  /Categories:
+  /categories:
     get:
       consumes:
       - application/json
@@ -188,7 +186,6 @@ paths:
       summary: Get Category
       tags:
       - category
-  /categories:
     post:
       consumes:
       - application/json
@@ -404,7 +401,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Update a commentss
+      description: Update a comments
       parameters:
       - description: ID
         in: path
