# api/models/user.go
@@ -1,17 +1,19 @@
 package models
 
+import "time"
+
 type User struct {
-	Id              int    `json:"id"`
-	FirstName       string `json:"first_name"`
-	LastName        string `json:"last_name"`
-	PhoneNumber     string `json:"phone_number"`
-	Email           string `json:"email"`
-	CreatedAt       string `json:"created_at"`
-	Gender          string `json:"gender"`
-	Password        string `json:"password"`
-	Username        string `json:"username"`
-	ProfileImageUrl string `json:"profile_image_url"`
-	Type            string `json:"type"`
+	Id              int       `json:"id"`
+	FirstName       string    `json:"first_name"`
+	LastName        string    `json:"last_name"`
+	PhoneNumber     string    `json:"phone_number"`
+	Email           string    `json:"email"`
+	CreatedAt       time.Time `json:"created_at"`
+	Gender          string    `json:"gender"`
+	Password        string    `json:"password"`
+	Username        string    `json:"username"`
+	ProfileImageUrl string    `json:"profile_image_url"`
+	Type            string    `json:"type"`
 }
 
 type CreateUser struct {
@@ -19,10 +21,9 @@ type CreateUser struct {
 	LastName        string `json:"last_name"`
 	PhoneNumber     string `json:"phone_number"`
 	Email           string `json:"email"`
-	CreatedAt       string `json:"created_at"`
 	Gender          string `json:"gender"`
 	Password        string `json:"password"`
-	Username        string `json:"username"`
+	UserName        string `json:"username"`
 	ProfileImageUrl string `json:"profile_image_url"`
 	Type            string `json:"type"`
 }
